--- a/task2/css/style.css
+++ b/task2/css/style.css
@@ -228,6 +228,7 @@
     background: url('../email.png') no-repeat 30px 15px;
     background-color: #ffffff;
     padding-left:81px;
+    cursor:pointer;
 }
 
 .subscribe_button
@@ -242,6 +243,7 @@
     font-weight: bold;
     text-align: center;
     color: #ffffff;
+    cursor:pointer;
 }
 
 .bottom_menu
