--- a/task3/css/style.css
+++ b/task3/css/style.css
@@ -227,6 +227,7 @@
     text-align: left;
     color: #777777;
     padding-left:30px;
+    cursor:pointer;
 }
 
 .enter-email
@@ -245,6 +246,7 @@
     background: url('../icons/email.png') no-repeat 30px 15px;
     background-color: #ffffff;
     padding-left:81px;
+    cursor:pointer;
 }
 
 
@@ -266,6 +268,7 @@
     -webkit-appearance: none;
     background: url('../icons/down-arrow.png') no-repeat 480px center;
     background-color: #ffffff;
+    cursor:pointer;
 }
 
 .check_actions
@@ -276,6 +279,7 @@
 .check_news
 {
     display:inline;
+    margin-left: 49px;
 }
 
 .check_text
@@ -300,10 +304,38 @@
     font-weight: bold;
     text-align: center;
     color: #ffffff;
+    cursor:pointer;
 }
 
 .bottom_menu
 {
     background: #ffffff;
     text-align: center;
+}
+
+.actions_and_sales, .new_articles
+{
+    opacity: 0;
+}
+
+.actions_and_sales + label, .new_articles + label
+{
+	position: relative;
+	cursor: pointer;
+}
+
+.actions_and_sales + label:before, .new_articles + label:before
+{
+    content: '';
+	position: absolute;
+    width: 18px;
+    height: 18px;
+    background-image: url(../icons/checkbox-clean.png);
+    left: -30px;
+    top: 2px;
+}
+
+.actions_and_sales:checked + label:before, .new_articles:checked + label:before
+{
+    background-image: url(../icons/checkbox-checked.png);
 }
